bin_PROGRAMS = eagle-eye
eagle_eye_CFLAGS = \
 $(glib_CFLAGS) \
 $(gtk_CFLAGS) \
 $(libsoup_CFLAGS) \
 $(webkit_CFLAGS)
eagle_eye_LDADD = \
 $(glib_LIBS) \
 $(gtk_LIBS) \
 $(libsoup_LIBS) \
 $(webkit_LIBS)
eagle_eye_SOURCES = \
  eagle-eye.c \
  ee-main-window.c ee-main-window.h \
  ee-prefs-dialog.c ee-prefs-dialog.h \
  ee-settings.c ee-settings.h \
  ee-url-manager.c ee-url-manager.h
